Revert stopping article meta links from wrapping

--- a/source/wp-content/themes/wporg-developer-2023/src/style/style.scss
+++ b/source/wp-content/themes/wporg-developer-2023/src/style/style.scss
@@ -104,8 +104,7 @@ body[class] {
 		}
 	}
 
-	time,
-	.external-link {
+	time {
 		white-space: nowrap;
 	}
 }
